# a2a-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
a2a-cli/: Cargo.toml  README.md
a2a-cli/src/: cli.rs  main.rs  output.rs
a2a-cli/src/commands/: card.rs  mod.rs  push.rs  send.rs  smoke.rs  stream.rs  task.rs
a2a-client/: Cargo.toml
a2a-client/examples/: README.md  polling_client.rs  simple_client.rs
a2a-client/src/: client.rs  lib.rs
a2a-core/: Cargo.toml
a2a-core/src/: compat.rs  lib.rs
a2a-server/: Cargo.toml
a2a-server/examples/: README.md  custom_handler.rs  echo_server.rs  multi_agent.rs  push_notifications.rs  streaming_agent.rs  tck_server.rs
a2a-server/src/: handler.rs  lib.rs  rest.rs  server.rs  task_store.rs  webhook_delivery.rs  webhook_store.rs
a2a-server/tests/: integration_tests.rs  subscribe_ordering.rs
docs/: architecture.md  getting-started.md
