[workspace]
resolver = "2"
members = ["a2a-core", "a2a-client", "a2a-server"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/tolgaki/a2a-rs"
homepage = "https://github.com/tolgaki/a2a-rs"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower = "0.4"
