[package]
name = "a2a-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Sample CLI client for A2A v1.0 servers, built on a2a-rs-client"
publish = false

[[bin]]
name = "a2a-cli"
path = "src/main.rs"

[dependencies]
a2a-rs-client = { version = "1.0.26", path = "../a2a-client" }
a2a-rs-core = { version = "1.0.26", path = "../a2a-core" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
