[package]
name = "a2a-rs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "A2A RC 1.0 client library for agent communication"
keywords = ["a2a", "agent", "json-rpc", "client"]
categories = ["web-programming", "network-programming"]

[lib]
name = "a2a_rs_client"
path = "src/lib.rs"

[dependencies]
a2a-rs-core = { version = "1.0.0", path = "../a2a-core" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
