[package]
name = "a2a-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core types for the A2A RC 1.0 agent-to-agent protocol"
keywords = ["a2a", "agent", "json-rpc", "protocol"]
categories = ["data-structures", "encoding"]

[lib]
name = "a2a_rs_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
